drkns 01.05.2017 22:42:32 +0000 - build 4948

1. Уточнение 4945.

zg 01.05.2017 16:49:59 +0200 - build 4947

1. уточнение 4945: в командной строке и в строках редактирования не работал CtrlEnd при отключённом автодополнении.

zg 01.05.2017 16:05:46 +0200 - build 4946

1. уточнение 4945: в редакторе не работал регистронезависимый поиск.

drkns 01.05.2017 00:21:40 +0000 - build 4945

1. Рефакторинг.

drkns 27.04.2017 20:58:46 +0000 - build 4944

1. Убираем пробелы при обработке pushd.

2. Более корректно убираем кавычки при обработке set.

zg 25.04.2017 12:59:57 +0200 - build 4943

1. исключение при вызове mf.fsplit('a.:',0x4+0x8)

drkns 24.04.2017 07:59:10 +0000 - build 4942

1. Уточнение 4940 ещё раз.

drkns 23.04.2017 22:24:28 +0000 - build 4941

1. Уточнение 4936.

2. Уточнение 4940.

3. Рефакторинг.

drkns 23.04.2017 15:52:18 +0000 - build 4940

1. 0003216: Клавиша Shift игнорируется в диалогах при включённой настройке автозавершения "Подставлять первый подходящий вариант"

drkns 22.04.2017 20:39:26 +0000 - build 4939

1. Уточнение 4938.

2. Рефакторинг.

drkns 22.04.2017 14:04:11 +0000 - build 4938

1. 0003424: Новый параметр командной строки для наследования заголовка консоли

2. Уточнение работы дополнения:
   - сортировка без учёта кавычек
   - сохранение уже введённого регистра
   - выделение учтывает позицию курсора

3. Рефакторинг.

drkns 18.04.2017 22:21:06 +0000 - build 4937

1. Рефакторинг.

drkns 17.04.2017 22:16:12 +0000 - build 4936

1. Panel.RememberLogicalDrives теперь, наверное, можно пользоваться - сохранённый список дисков будет обновлён при необходимости.

2. При запуске с плагиновых панелей удаление временного файла производится после закрытия панели, а не сразу.

3. Рефакторинг.

drkns 12.04.2017 18:58:51 +0000 - build 4935

1. Продолжение 4934.

drkns 11.04.2017 07:51:48 +0000 - build 4934

1. Обработка Num-клавиш в меню редактирования режимов панелей.

drkns 08.04.2017 19:00:16 +0000 - build 4933

1. Рефакторинг.
