@@ -1,3 +1,7 @@
+zg 02.05.2017 16:38:35 +0200 - build 4949
+
+1. уточнение 4945: не работала команда if exist.
+
 drkns 01.05.2017 22:42:32 +0000 - build 4948
 
 1. Уточнение 4945.
